<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".screens.login.signin.SignInActivity"
    tools:showIn="@layout/activity_signin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_signin_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:transitionName="@string/transition_login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txt_signin_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_signin_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:transitionName="@string/transition_login_password"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout_signin_email"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout_signin_email"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_signin_email"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/txt_signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_signin_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:clickable="true"
        app:backgroundTint="#3b5998"
        app:layout_constraintBottom_toBottomOf="@+id/fab_signin_google"
        app:layout_constraintEnd_toStartOf="@+id/fab_signin_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fab_signin_google"
        app:srcCompat="@drawable/facebook_logo" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_signin_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        app:backgroundTint="#d34836"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/btn_signin_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_signin_password"
        app:layout_constraintVertical_bias="0.258"
        app:srcCompat="@drawable/google_plus_logo" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_signin_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/fab_signin_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fab_signin_google"
        app:layout_constraintTop_toTopOf="@+id/fab_signin_google"
        app:srcCompat="@drawable/github_logo" />

    <Button
        android:id="@+id/btn_signin_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:transitionName="@string/transition_login_enter"
        app:layout_constraintBottom_toTopOf="@+id/lbl_signin_forgot_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/signin" />

    <TextView
        android:id="@+id/lbl_signin_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/forgot_your_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>

